[tool.poetry]
name = "personal-test"
version = "0.1.0"
description = ""
authors = ["taapp <julius.nieminen@helsinki.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
